--- a/Week27/hhiyeon/모던자바인액션5.md
+++ b/Week27/hhiyeon/모던자바인액션5.md
@@ -1,5 +1,238 @@
-#### 4. 검색과 매칭 156 ~ 195
+#### 4. 검색과 매칭
+- anyMatch 메서드
+  - predicate 가 적어도 한 요소와 일치하는지 확인
+
+
+```java
+if(menu.stream().anyMatch(Dish::isVegetarian)) {
+    System.out.println("The menu is (somewhat) vegetarian friendly");
+}
+```
+
+
+- allMatch
+  - 모든 요소가 predicate 와 일치하는지 확인한다.
+
+
+```java
+boolean isHealthy = menu.stream()
+        .allMatch(dish -> dish.getCalroies() < 1000); // 모든 요소가 1000 칼로리 이하면 True
+```
+
+
+- nonMatch
+  - allMatch 와 반대 연산
+  - 주어진 predicate 와 일치하는 요소가 없는지 확인
+
+
+```java
+boolean isHealthy = menu.stream()
+        .nonMatch(d -> d.getCalories() >= 1000); // 1000 이상 요리가 없는지 확인
+```
+
+
+- 쇼트 셔킷 평가
+  - 표현식에서 하나라도 거짓이라는 결과가 나오면, 나머지 표현식의 결과와 상관없이 전체 결과가 거짓이 된다.
+  - allMatch, nonMatch, findFirst, findAny 연산들은 쇼트 셔킷 기법
+  - 모든 스트림을 처리하지 않아도, 결과 반환이 가능하다.
 
 ---
+- findAny
+  - 임의의 요소를 반환
+  - 다른 연산과 연결 가능
+  - 어떤 조건에 일치하는 요소 1개를 반환한다. (가장 먼저 탐색되는 요소 return)
 
 
+
+```java
+Optional<Dish> dish = 
+        menu.stream()
+        .filter(Dish::isVegetarian) // 채식 요리 필터링
+        .findAny(); 
+```
+
+
+- Optional
+  - 값의 존재나 부재 여부를 표현하는 컨테이너 클래스
+  - null 반환 위험성으로, 자바 8에서 Optional<T> 사용
+  - 기능
+    - isPresent() : Optional이 값을 포함하면 true, 값을 포함하지 않으면 false
+    - ifPresent(Consumer<T> block) : 값이 있으면 주어진 블록 실행
+    - T get() : 값이 존재하면 값 반환, 값이 없으면 NoSuchElementException 발생
+    - T orElse(T other) : 값이 있으면 값 반환, 값이 없으면 기본값 반환
+
+
+```java
+menu.stream()
+        .filter(Dish::isVegetarian)
+        .findAny() // 값이 있으면 요소 1개 반환 -> Optional<Dish> 반환
+        .ifPresent(dish -> System.out.println(dish.getName()); // 값이 있으면 실행, 없으면 실행 X
+```
+
+
+- findFirst
+  - findAny 는 가장 먼저 탐색되는 요소 1개를 반환하지만
+  - findFirst는 조건이 일치하는 요소들 중에서 stream 에서 순서가 가장 앞에 있는 것 반환
+
+
+- findFirst vs findAny
+  - 둘 다 사용하는 이유는 -> 병렬성
+  - 병렬 실행에서 첫 번째 요소를 찾기 어렵다.
+  - 요소 반환 순서가 상관 없을 때, 병렬 스트림에서 제약이 적은 findAny 사용
+
+---
+#### 5. 리듀싱 
+- 리듀싱 연산
+  - 모든 스트림 요소를 처리해서 값으로 도출하는 것
+
+
+```java
+int sum = 0;
+for (int x : numbers) {
+    sum += x;
+}
+
+// 위의 코드를 reduce 활용해서 반복된 패턴을 추상화할 수 있다.
+int sum = numbers.stream().reduce(0, (a, b) -> a + b);
+int product = numbers.stream().reduce()
+```
+
+
+<img width="480" alt="스크린샷 2023-05-21 오후 9 30 16" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/43aaf234-fa2c-4f1b-83ba-815ff5ccbca7">
+
+
+- 최댓값과 최솟값
+  - reduce 활용
+  - reduce 연산은 새로운 값을 이용해서 스트림의 모든 요소를 소비할 때까지 람다를 반복 수행해서 결과 수행
+
+
+```java
+Optional<Integer> max = numbers.stream().reduce(Integer::max);
+Optional<Integer> min = numbers.stream().reduce(Integer::min);
+```
+
+
+- reduce 메서드 장점, 병렬화
+  - 기존 반복보다 reduce 를 사용하면 내부 반복이 추상화
+  - 내부 구현에서 병렬로 reduce 실행
+  - 반복적인 합계에서, sum 은 변수 공유를 해야해서 병렬화가 쉽지 않다.
+  - 강제 동기화를 해도, 스레드 간 소모적 경쟁 > 병렬화로 인한 이득
+  - 병렬화를 위해서, 입력 분할 + 분할된 입력 더하기 + 더한 값 합치기 활용
+  - 스트림의 모든 요소 더하는 코드를 병렬로 만드는 방법 -> parallelStream()
+
+
+```java
+int sum = numbers.parallelStream().reduce(0, Integer::sum);
+```
+
+
+<img width="494" alt="스크린샷 2023-05-21 오후 9 50 00" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/183c8ef0-7b74-47eb-ae75-27d04bd108bf">
+
+
+---
+#### 7. 숫자형 스트림
+- reduce 를 사용해서 요소 합계 구하기
+
+
+```java
+int calories = menu.stream()    
+        .map(Dish::getCalories)
+        .reduce(0, Integer::sum);
+```
+
+
+- 위의 코드에서 박싱 비용 발생 : 내부적으로 합계 계산하기 전, Integer 를 기본형으로 언박싱해야 한다.
+- 인터페이스에는 sum 메서드가 없기 때문에 아래 코드 사용 불가능
+- 기본형 특화 스트림(primitive stream specialization) : 스트림 API 숫자 스트림을 효율적으로 처리
+
+
+```java
+int calories = menu.stream()
+        .map(Dish::getCalories)
+        .sum(); // sum 메서드를 직접 호출하는건 불가능 -> map 메서드는 Stream<T> 를 생성한다.
+```
+
+
+- 기본형 특화 스트림
+  - 자바 8에서 세가지 제공
+  - IntStream
+  - DoubleStream
+  - LongStream
+  - 각각의 인터페이스는 숫자 스트림의 합계를 계산하는 sum, 최댓값 요소 검색 max 등등 숫자 관련 리듀싱 연산 수행 메서드 제공
+
+
+- 숫자 스트림으로 매핑
+  - 스트림 -> 특화 스트림 변환 : mapToInt, mapToDouble, mapToLong 사용
+  - map 과 같은 기능이지만, Stream<T> 대신 특화 스트림을 반환
+
+
+```java
+int calories = menu.stream() // Stream<Dish> 반환
+        .mapToInt(Dish::getCalories) // IntStream 반환
+        .sum();
+// mapToInt에서 모든 요소를 Integer로 추출하고 IntStream 반환
+// IntStream 에서 제공하는 sum 메서드로 합계 구하기
+```
+
+
+- 객체 스트림으로 복원
+  - boxed 메서드를 사용해서 특화 스트림을 일반 스트림으로 변환한다.
+
+
+```java
+IntStream intStream = menu.stream().mapToInt(Dish::getCalories); // 스트림을 숫자 스트림으로 
+Stream<Integer> stream = intStream.boxed(); // 숫자 스트림을 스트림으로
+```
+
+
+- 숫자 범위
+  - IntStream, LongStream 에서 range, rangeClosed 두 가지 정적 메서드 제공
+  - 첫 번째 인수로 시작, 두 번째 인수로 종료 값
+  - range : 시작값과 종료값이 결과에 포함 X
+  - rangeClosed : 시작값과 종료값이 결과에 포함된다.
+
+
+```java
+IntStream evenNumbers = IntStream.rangeClose(1, 100) // 1 ~ 100
+        .filter(n -> n % 2 == 0); // 짝수
+System.out.println(evenNumbers.count()); // 1 ~ 100 짝수 개수는 50개
+```
+
+
+---
+#### 8. 스트림 만들기
+- 값으로 스트림 만들기
+  - 정적 메서드 Stream.of 사용
+
+
+```java
+Stream<String> stream = Stream.of("one", "two", "three");
+```
+
+
+- null이 될 수 있는 객체로 스트림 만들기
+
+
+```java
+Stream<String> values = 
+    Stream.of("one", "two", "three")
+        .flatMap(key -> Stream.ofNullable(System.getProperty(key)));
+```
+
+
+
+- 배열로 스트림 만들기
+  - 정적 메서드 Arrays.stream 활용
+
+
+```java
+int[] numbers = {2,3,5,7,11,13};
+int sum = Arrays.stream(numbers).sum();
+```
+
+
+- 함수로 무한 스트림 만들기
+  - 두 정적 메서드 Stream.iterate, Stream.generate 사용
+
+
+---
