add Week29 computer structure : CPU

--- a/Week29/hhiyeon/컴퓨터구조.md
+++ b/Week29/hhiyeon/컴퓨터구조.md
@@ -83,6 +83,12 @@ ex. 명령어 : 1과 2를 더해라
 
 #### 명령어 실행 예시
 - 제어 장치는 1번지의 명령어를 읽기 위해서 메모리에 읽기 제어 신호를 보낸다.
+
+
+<img width="682" alt="스크린샷 2023-06-03 오후 11 23 27" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/ead3a8cd-e41f-495d-9cfc-1bed282abcc6">
+
+
+
 - 메모리는 1번지에 있는 명령어를 CPU 에게 전달, 이 명령어는 레지스터에 전달된다.
 - 레지스터에 들어온 명령어를 제어장치가 해석한다.
 - 레지스터에 있는 명령어(3번지와 4번지를 더하기)에서 3번지와 4번지의 데이터를 얻기 위해 메모리에 메모리 읽기 제어 신호를 보낸다.
