add Week31 Computer Structure

--- a/Week31/hhiyeon/컴퓨터구조.md
+++ b/Week31/hhiyeon/컴퓨터구조.md
@@ -150,7 +150,7 @@
     - 2의 보수(음수 표현) : 모든 0과 1을 뒤집고 1을 더한다.
     - ex. 11(2) = 00(2) = 01(2)
     - 양수인지 음수인지 구분하는 방법? : CPU에 있는 레지스터인 플래그(flag)로 구분한다.
-
+    - 접두어 : 0b
 
 <img width="213" alt="스크린샷 2023-06-06 오후 2 37 19" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/a1034014-fee3-4e0c-ab8f-387ce499a4a7">
 
@@ -159,6 +159,7 @@
 - 16진법(Hexadecimal)
     - 십진법보다 이진수와의 변환이 간단해서 사용
     - 십진수 : 16 = 16진수 : 10
+    - 접두어 : 0x
 
 
 <img width="313" alt="스크린샷 2023-06-06 오후 2 48 56" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/95db258f-1f59-4ee8-a0ca-efdefcd32551">
@@ -344,3 +345,23 @@
 
 
 ---
+#### 저장 장치 계층 구조
+- CPU 와 가까운 저장 장치는 빠르고, 멀리 있는 저장 장치는 느리다.
+- 속도가 빠른 저장 장치는 저장 용량이 적고, 가격이 비싸다.
+- CPU 에 가까운 순서 : 레지스터 > 메모리(RAM) > USB
+
+
+- 캐시 메모리
+  - CPU 와 메모리 사이에 위치
+  - 레지스터보다 용량이 빠르고, 메모리보다 빠른 SRAM 기반 저장 장치
+  - 메모리에 계속 접근하는 것 보다 일부 데이터를 캐시 메모리에서 저장해둔 뒤 사용
+  - 캐시 메모리는 CPU(코어)에 위치 하거나 CPU와 메모리 사이에 위치
+    - L1, L2 코어에 위치
+    - L3 CPU와 메모리 사이에 위치
+  - 멀티 코어 프로세서에서는 각 코어에 위치한 캐시 메모리가 다른 경우가 있기 때문에, 싱크를 맞춰주는 작업이 필요하다.
+  - CPU가 자주 사용할 법한 메모리를 저장
+    - 캐시 히트 : CPU가 캐시 메모리에 저장된 값을 활용(예측 성공)
+    - 캐시 미스 : CPU가 메모리에 접근해야 하는 경우(예측 실패)
+  - 참조 지역성의 원리
+    - CPU가 최근에 접근했던 메모리 공간에 다시 접근하려는 경향
+    - CPU가 접근한 메모리 공간 근처를 접근하려는 경향
