add Week32 Operating System

--- a/Week32/hhiyeon/운영체제.md
+++ b/Week32/hhiyeon/운영체제.md
@@ -153,3 +153,101 @@
 - 스케줄링 큐
 
 ---
+#### 선점(preemptive) 스케줄링
+- 프로세스가 CPU를 할당받아 실행 중이어도, 운영체제가 CPU의 사용권을 선점 가능
+- 처리 시간 예측이 어렵다.
+- 잦은 문맥 교환으로 오버헤드 발생 가능성이 있다.
+- CPU 사용 독점 문제를 막을 수 있다.
+- Interrupt, I/O or Event Completion, I/O or Event Wait, Exit
+
+
+#### 비선점(non-preemptive) 스케줄링
+- 프로세스가 CPU를 점유하고 있으면, 사용을 뺐을 수 없는 방식
+- 필요한 문맥 교환만 일어나기 때문에 오버헤드가 상대적으로 적다.
+- 처리 시간 예측이 쉽다.
+- I/O or Event wait, Exit
+
+
+#### 프로세스 상태 다이어그램
+
+
+
+<img width="699" alt="스크린샷 2023-06-26 오후 7 52 35" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/5d0a34a3-af39-43a8-b7cb-830c5c3bc712">
+
+
+- 승인(Admitted) : 프로세스 생성이 가능하여 승인된 상태
+- 스케줄러 디스패치(Scheduler dispatch) : 준비 상태에 있는 프로세스 중 하나를 선택하여 실행
+- 인터럽트(Interrupt) : 예외, 입출력, 이벤트 등이 발생해서 현재 실행 중인 프로세스를 준비 상태로 바꾸고, 해당 작업을 먼저 처리 
+- 입출력 또는 이벤트 대기(I/O or event wait) : 실행 중인 프로세스가 입출력이나 이벤트를 처리해야 하는 경우, 입출력/이벤트가 모두 끝날 때 까지 대기 상태로 만드는 것
+- 입출력 또는 이벤트 완료(I/O or event completion) : 입출력/이벤트가 끝난 프로세스를 준비 상태로 전환하여 스케줄러에 의해 선택될 수 있도록 만드는 것
+
+
+---
+#### CPU 스케줄링 종류
+- 비선점 스케줄링
+    1. FCFS(First Come First Served) 선입 선처리 스케줄링
+        - 준비 큐에 삽입된 순서대로 처리하는 비선점 스케줄링
+        - 먼저 CPU를 요청한 프로세스부터 CPU 할당
+        - 실행 시간이 짧은 것이 뒤로 가면 평균 대기 시간이 길어진다.
+
+    2. SJF(Shortest Job First) 최단 작업 우선 스케줄링
+       - 수행 시간이 가장 짧다고 판단되는 작업을 먼저 수행
+       - FCFS 보다 평균 대기 시간 감소, 짧은 작업에 유리하다.
+    
+       <img width="296" alt="스크린샷 2023-06-26 오후 8 16 11" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/cf40fde4-8c14-4b1a-aeb1-b120dbefdc78">
+       
+
+- 선점 스케줄링
+    1. RR(Round Roubin) 라운드 로빈
+        - FCFS + 타임 슬라이스(time slice) or Time Quantum
+        - 타임 슬라이스 : 실행의 최소 단위 시간, 각 프로세스가 CPU를 사용할 수 있는 정해진 시간
+        - 정해진 시간을 모두 사용해도, 프로세스가 완료되지 않으면 큐의 맨 뒤에 삽입(문맥 교환)
+        - Time Quantum이 크면 FCFS와 같고, 작으면 문맥 교환이 잦아져서 오버헤드 발생
+
+    2. SRT(Shortest Remaining Time) 최소 잔여 시간 우선 스케줄링
+        - SJF + RR
+        - 정해진 시간만큼 CPU를 사용하고, 다음으로 CPU를 사용할 프로세스를 남은 작업 시간이 가장 적은 프로세스를 선택한다.
+
+    3. Priority Scheduling(우선순위 스케줄링)
+        - 프로세스들에 우선순위를 부여하고, 우선순위 높은 프로세스부터 실행
+        - 우선순위가 같은 프로세스들은 FCFS 스케줄링
+        - 단점 : 우선 순위가 낮은 프로세스를 무한정 기다리는 기아(starvation) 현상
+        - Aging 방법으로 기아 현상 해결이 가능하다.    
+        - Aging : 오랫동안 대시한 프로세스의 우선순위를 점차 높이는 방식
+
+    4. Multilevel-Queue(다단계 큐)
+        - 우선순위 스케줄링이 발전된 형태
+        - 우선순위별로 준비 큐를 여러 개 사용하는 스케줄링 방식
+        - 우선순위가 가장 높은 큐에 있는 프로세스를 먼저 처리하고, 가장 높은 큐가 비어 있으면 그 다음 우선순위 큐에 있는 프로세스를 처리한다.
+        - 우선순위가 높은 큐는 작은 Time Quantum, 우선순위가 낮은 큐는 큰 Time Quantum
+
+        <img width="420" alt="스크린샷 2023-06-26 오후 8 23 07" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/104911e0-7752-4760-8e66-6d88a75fef26">
+
+    5. Multilevel feedback queue(다단계 피드백 큐 스케줄링)
+        - 큐 간의 이동이 가능한 다단계 큐 스케줄링
+        - 자연스럽게 CPU 집중 프로세스의 우선순위는 상대적으로 낮아지고, 입출력 집중 프로세스의 우선순위는 높아진다.
+        
+        <img width="438" alt="스크린샷 2023-06-26 오후 8 33 11" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/8f197310-ca71-4cc7-bc81-cb9b13d18956">
+
+---
+#### 동기화
+- 프로세스들의 수행 시기를 맞추는 것
+- 실행 순서 제어 : 프로세스를 올바른 순서대로 실행, reader writer problem 
+  - reader와 writer 프로세스는 아무렇게나 실행 되면 X
+- 상호 배제 : 동시 접근이 안되는 자원에 하나의 프로세스만 접근하게 하기, bank account problem
+  - 한 번에 하나의 프로세스만 접근해야 하는 자원에 동시 접근을 피하기 위한 동기화
+  - ex. 계좌에 입금할 때 현재 잔액 + 추가 금액
+
+
+- 공유 자원 : 여러 프로세스 혹은 스레드가 공유하는 자원
+  - ex. 전역 변수, 파일, 입출력장치, 보조기억 장치 등등
+- 임계 구역 : 동시에 실행하면 문제가 발생하는 자원에 접근하는 코드 영역
+  - ex. 총합 변수, 잔액 변수
+- 레이스 컨디션(race condition) : 임계 구역에 동시에 접근하면 자원의 일관성이 꺠지는 것
+---
+#### Race Condition
+- 공유 자원에 대해 여러 프로세스가 동시에 접근할 때, 결과값에 영향을 줄 수 있는 상태
+
+---
+#### 동기화 기법
+- 뮤텍스 락, 세마포어, 모니터
