--- a/Week36/hhiyeon/정리.md
+++ b/Week36/hhiyeon/정리.md
@@ -2,4 +2,7 @@
 ### 13장 : 검색어 자동 완성 시스템
 - 검색어를 입력하고 있을 때, 자동으로 완성되는 검색어 만들기
 - 검색어 자동완성(autocomplete, typeahead, search-as-you-type, incremental search)
-- 
+
+
+<img width="293" alt="스크린샷 2023-07-21 오후 10 55 37" src="https://github.com/hhiyeon/hhiyeon/assets/52193680/013d8ada-9c7f-4511-8df0-92b49bb45fea">
+
